--- a/index.html
+++ b/index.html
@@ -8,32 +8,14 @@
     <title>Sistema de Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
 </head>
 
-<body>
-    <!-- Contenedor para las partículas -->
-    <div id="particles-js"></div>
-
-    <div class="theme-switch-wrapper">
-        <label class="theme-switch" for="checkbox">
-            <input type="checkbox" id="checkbox" />
-            <div class="slider round">
-                <i class="fas fa-sun"></i>
-                <i class="fas fa-moon"></i>
-            </div>
-        </label>
-    </div>
-
-    <div class="theme-switch-wrapper">
-        <label class="theme-switch" for="checkbox">
-            <input type="checkbox" id="checkbox" />
-            <div class="slider round">
-                <i class="fas fa-sun"></i>
-                <i class="fas fa-moon"></i>
-            </div>
-        </label>
+<body data-bs-theme="light">
+    <div class="d-flex justify-content-center " id="boton">
+        <button onclick="cambiarTema()" class=" btn rounded-fill"><i id="d1-icon" class="bi bi-moon-fill"></i></button>
     </div>
 
     <div class="container">
@@ -127,11 +109,10 @@
         </div>
     </div>
 
-    <!-- Bootstrap Bundle con Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="particles-config.js"></script>
     <script src="script.js"></script>
+    <script src="dark.js"></script>
 </body>
 
 </html>
