--- a/welcome.html
+++ b/welcome.html
@@ -8,13 +8,15 @@
     <title>Bienvenido</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="welcome.css">
 </head>
 
-<body>
+<body data-bs-theme="light">
 
     <div class="container">
         <div class="welcome-card">
+            <button onclick="cambiarTema()" class=" btn rounded-fill"><i id="d1-icon" class="bi bi-moon-fill"></i></button>
             <!-- Sección de perfil-->
             <div class="profile-section">
                 <div class="profile-avatar">
@@ -75,12 +77,8 @@
         </div>
     </div>
 
-    <div id="particles-js"></div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="particles-config.js"></script>
     <script src="welcome.js"></script>
+    <script src="dark.js"></script>
 </body>
 
 </html>
